[tool.poetry]
name = "pytest-with-crypto"
version = "0.1.0"
description = ""
authors = ["Sambiase <marsamb@gmail.com>"]
readme = "README.md"
packages = [{include = "pytest_with_crypto"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
